# bigsper

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  railway.toml
.chroma/6dd1870b-7aaa-4aa2-a9a8-79f04f24e0bd/: index_metadata.pickle
backend/: app.py  auth.py  course.py  llm.py
backend/engine/: __init__.py  demo_cache.py  diagnostic.py  faculty.py  lessons.py  rag.py  scorecard.py  tasks.py
courses/_template/: graph.json  manifest.py  verifier.py
courses/aptitude/: graph.json  manifest.py  verifier.py
courses/aptitude/corpus/: arithmetic.md  data_interp.md  percentages.md  ratios.md  time_speed.md
courses/sql/: cohort.json  graph.json  manifest.py  schema.txt  seed.sql
courses/sql/corpus/: aggregation.md  cte.md  data_types.md  dml.md  filtering.md  grouping.md  indexes.md  inner_join.md  normalization.md  outer_join.md  schema_design.md  select_basics.md  self_join.md  set_ops.md  sorting.md  subqueries.md  transactions.md  window_advanced.md  window_basics.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx  TopBar.tsx  ui.tsx
