[project]
name = "bigsper"
version = "0.1.0"
description = "The future of learning — course-agnostic adaptive tutoring engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "networkx>=3.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "scalekit-sdk-python>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
